<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/t_izena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiketa_izena"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/izena"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_izena"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_izena">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/t_mota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiketa_mota"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/izena" />

        <Spinner
            android:id="@+id/mota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/tipos_lugar"
            app:layout_constraintBottom_toBottomOf="@id/t_mota"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/t_mota"
            app:layout_constraintTop_toTopOf="@id/t_mota" />

        <TextView
            android:id="@+id/t_helbidea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiketa_helbidea"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mota" />

        <EditText
            android:id="@+id/helbidea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_helbidea"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_helbidea" />

        <TextView
            android:id="@+id/t_telefonoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiketa_telefonoa"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/helbidea" />

        <EditText
            android:id="@+id/telefonoa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telefonoa"
            android:inputType="phone"
            app:layout_constraintBaseline_toBaselineOf="@id/t_telefonoa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/t_telefonoa" />

        <TextView
            android:id="@+id/t_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiketa_url"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/telefonoa" />

        <EditText
            android:id="@+id/url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_url"
            android:inputType="textUri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_url" />

        <TextView
            android:id="@+id/t_iruzkina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiketa_iruzkina"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/url" />

        <EditText
            android:id="@+id/iruzkina"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_iruzkina"
            android:inputType="textMultiLine"
            android:minLines="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_iruzkina" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>